# cpp-neural-network

./: .gitignore  README.md
_notes/: nn.md  ocr.md  q-a.md
multilayer-perceptron/: CMakeLists.txt
sample-01/: MLP.h
